Name:                cavern
Version:             0.1
Synopsis:            Interactive Fiction Player

-- A longer description of the package.
-- Description:         
License:             GPL-3
License-file:        LICENSE
Author:              Luis Cabellos
Maintainer:          zhen.sydow@gmail.com
Copyright:           (c) 2012 Luis Cabellos
Category:            Game
Build-type:          Simple
Extra-source-files:  README.org
Cabal-version:       >=1.10


Executable cavern
  Hs-source-dirs:      src
  Default-language:    Haskell2010
  Main-is:             cavern_main.hs
  Build-depends:       base==4.3.*, SDL==0.6.*
  Ghc-options:         -Wall -O2 -funbox-strict-fields
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  